# NLP-Project

./: .gitignore  FRONTEND_GUIDE.md  README.md  README_FRONTENDS.md  README_OLD.md  REFACTORING_SUMMARY.md  SETUP_AND_RUN.md  api.py  app.py  cli.py  config.py  index.html  inference.py  launch.py  main.py  pyproject.toml  requirements.txt  xlex.json
.streamlit/: config.toml
data/: dataset.py  load_data.py
models/: model.py
results/: metrics.json
training/: evaluate.py  train.py
utils/: metrics.py  plots.py  tokenizer.py
xlex/: build_xlex.py  xlex.py
