[project]
name = "nlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.28.0",
    "tabulate>=0.9.0",
    "torch>=2.0.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.0",
    "transformers>=4.30.0",
]
